--- a/testwork/env.properties
+++ b/testwork/env.properties
@@ -1,6 +1,6 @@
 [tools]
 tizen=tools/ide/bin/tizen
 sdb=tools/sdb
-em_cli=tools/emulator/bin/em-cli
+em_cli=tools/emulator/bin/em-cli2
 [setting]
-platforms=mobile-2.3,mobile-2.4,tv-2.3,tvsdk-1.5
+platforms=mobile-2.3,mobile-2.4
